[gd_scene load_steps=8 format=2]

[ext_resource path="res://MannyTest/TeenyTinyPixels.tres" type="DynamicFont" id=1]
[ext_resource path="res://Actual/UI/Scripts/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://MannyTest/SelectionArrow.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "d",
"speed": 5.0
} ]

[node name="Button" type="Button"]
margin_right = 60.0
margin_bottom = 18.0
focus_mode = 1
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/focus = SubResource( 4 )
action_mode = 0
button_mask = 0
flat = true
align = 0
script = ExtResource( 2 )

[node name="MenuButton" type="Label" parent="."]
margin_left = 16.0
margin_right = 56.0
margin_bottom = 16.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="OptionArrow" type="AnimatedSprite" parent="."]
position = Vector2( -8, 8 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "d"

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
